K8s/observability/kube-prometheus-stack/grafana-httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: grafana
  namespace: observability
  labels:
    app.kubernetes.io/name: grafana
    app.kubernetes.io/instance: grafana-demo
    app.kubernetes.io/component: visualization
  annotations:
    description: 'HTTPRoute for Grafana dashboards'
    contact: platform-team
    documentation: https://grafana.com/docs/
spec:
  parentRefs:
    - name: idp-gateway
      namespace: kube-system
  hostnames:
    - "grafana.127-0-0-1.sslip.io"
  rules:
    - backendRefs:
        - name: prometheus-crds-grafana
          port: 80
